@@ -32,4 +32,5 @@ _mosquitto_set_username
 _mosquitto_strdup
 _mosquitto_sub_topic_check
 _mosquitto_topic_matches_sub
+_mosquitto_topic_matches_sub_with_pattern
 _mosquitto_validate_utf8
