@@ -33,5 +33,6 @@
 	mosquitto_strdup;
 	mosquitto_sub_topic_check;
 	mosquitto_topic_matches_sub;
+	mosquitto_topic_matches_sub_with_pattern;
 	mosquitto_validate_utf8;
 };
